[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchextractx"
version = "0.2.0"
description = "A PyTorch utility library for managing extra losses, metrics, and outputs from nested modules"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "5o1"},
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
]
keywords = ["pytorch", "context-manager", "loss", "metric", "auxiliary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "pylint>=3.0",
    "mypy>=0.950",
    "tomli>=2.0; python_version < '3.11'",
]
docs = [
    "sphinx>=4.5",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/5o1/TorchExtraContext"
Documentation = "https://github.com/5o1/TorchExtraContext/blob/main/README.md"
Repository = "https://github.com/5o1/TorchExtraContext"
"Bug Tracker" = "https://github.com/5o1/TorchExtraContext/issues"

[tool.setuptools]
packages = ["torchextractx"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pylint.main]
persistent = false
